@@ -4,10 +4,10 @@ DESCRIPTION=An IMAP and POP3 server written with security primarily in mind
 EAPI=5
 HOMEPAGE=http://www.dovecot.org/
 IUSE=kerberos ldap mysql pam postgres sqlite vpopmail cydir imapc +maildir mbox mdbox pop3c sdbox bzip2 lzma lz4 zlib caps doc ipv6 lucene managesieve selinux sieve solr +ssl static-libs suid tcpd ssl
-KEYWORDS=amd64 ~arm ~hppa ia64 ~x86
+KEYWORDS=amd64 ~arm ~hppa ia64 ~ppc ~ppc64 ~x86
 LICENSE=LGPL-2.1 MIT
 RDEPEND=bzip2? ( app-arch/bzip2 ) caps? ( sys-libs/libcap ) kerberos? ( virtual/krb5 ) ldap? ( net-nds/openldap ) lucene? ( >=dev-cpp/clucene-2.3 ) lzma? ( app-arch/xz-utils ) lz4? ( app-arch/lz4 ) mysql? ( virtual/mysql ) pam? ( virtual/pam ) postgres? ( dev-db/postgresql-base !dev-db/postgresql-base[ldap,threads] ) selinux? ( sec-policy/selinux-dovecot ) solr? ( net-misc/curl dev-libs/expat ) sqlite? ( dev-db/sqlite ) ssl? ( dev-libs/openssl ) tcpd? ( sys-apps/tcp-wrappers ) vpopmail? ( net-mail/vpopmail ) zlib? ( sys-libs/zlib ) virtual/libiconv net-mail/mailbase
 SLOT=0
 SRC_URI=http://dovecot.org/releases/2.2/dovecot-2.2.13.tar.gz sieve? ( http://www.rename-it.nl/dovecot/2.2/dovecot-2.2-pigeonhole-0.4.2.tar.gz ) managesieve? ( http://www.rename-it.nl/dovecot/2.2/dovecot-2.2-pigeonhole-0.4.2.tar.gz )
 _eclasses_=eutils	06133990e861be0fe60c2b428fd025d9	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ssl-cert	b53367370fde96e19beca78050a47c61	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0f1760274637a138b99bb649202ea402	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=f35bfac5bda2e6584cb5d757164058e6
+_md5_=4cfb125576fec63dd5a8fe309bc54ce7
