@@ -10,16 +10,26 @@ DIST dovecot-2.2.12.tar.gz 4587634 SHA256 f3de1cae5665ff202713c1489bc96b4d029760
 DIST dovecot-2.2.13.tar.gz 4613824 SHA256 133cf3d2aa81733f6688ec986c91dbe07602fad81e856ba3d8046ffca85d9dce SHA512 1f3c0e600048ac2c1b2e497286620976c0fc821a6cac8e4e1492180af8eb9620cd143c89ee6d12872cecacbcadca573435cce1050c46325de3072c98ab5a9331 WHIRLPOOL 7bb81575faf69820b07d654c469fdd3fcf12c47517bb1dd6ea5566771bb60ce8f9c3a1a7b5c6df6d5f4b903d10472ffa1cca1a01c7fd158b6055794a44aacf39
 DIST dovecot-2.2.9.tar.gz 4540858 SHA256 7c3b6b8a05f6ebcc9fd01736fdcac0de12158959f5b99d1f7077f7a8626ee2d5 SHA512 41f826df22d3b34116de7abaa4543cbcf9362d7db1348e3b685019263b89d0ffe8bf0c1ddf21e4baa3bb7e98c87047b85b6fec78873df7f0db18ccecf63cea55 WHIRLPOOL 775cdbca9be788b1d20cd7f45e4d9a6265936b39a780b2232efa84958fa75a11f0984f680249e2af5faf40c9c91fa5c57026b55865dcaeddabcc90d44e3b6fae
 EBUILD dovecot-2.2.10.ebuild 8632 SHA256 19d797f4d966f1bc0e46aaf02f4bda652189d55b758527589faa285b8209c8f5 SHA512 174e8020c895d282aaf9ff7d3d9c7ee552198e75baf751a96b336744734a85d9f346fe6d060902c4b2e559614db1ca92749439eb21c8e482ea4406cc52d54657 WHIRLPOOL f69d5e23236dbc5414642738e464c433cd41467a3144d4838a50ff8f450e9a79d7ec6a8d0034c8ab081b9a1104cf65e5d84513e205bc74cfabb90e7aa94338dd
-EBUILD dovecot-2.2.12.ebuild 8825 SHA256 68cf99e54403ce69a33320d21b305e9385dfadd7d49e20c2bc64f1bdef02d053 SHA512 442028d1c98e38afaecb4ab208b1808a585457792aefab500dcdb296762eabd6ec15c6b619b113fa619248208813c720fb8d616283f12e4b9b11fd8ee5ac699b WHIRLPOOL 1d726b36d3d54769862174b281c611774c00c41afce530c073c7f30f6f6c4989b4ccaadbbedbc4469bb3fb70eb17f46dda0bfff4244dd7455221c53a4c694d7d
-EBUILD dovecot-2.2.13-r1.ebuild 8907 SHA256 8432a23d5b8552d4c7c12df8a546b1875863cbd06efb68828ef7c7ba7bfd3daa SHA512 d172a67a78ab76708c2588cf03fb047186d82c7b7f9b0cc083e671448b286b8f5017887634f2c84ac514415e7e27849ca607ee4a68a8da4692c5935512120e2d WHIRLPOOL 7921047518bf74cc8590909cb2595f857c516e466039e160de47f686ed9e7fb8306dad6b627ab9cdfc37d6c6e0d8835f3bfcadc87d1f76945cd78342544cdd70
-EBUILD dovecot-2.2.13.ebuild 8882 SHA256 453f52d0d9405c2229b2045d25f9510f8c549dd2a3cdd9acc4799e8930ab6ed0 SHA512 32334a1bcfb9246cf70a02fd1b5f081a4611242d2f179493de2879e0d5cd312e0fdecc61d162230213362cdf78a531e5e153ed433e9a096e7e190119a1a72d9c WHIRLPOOL a38e6fd012e2d2f75c35ff43063c7a05a1bbca687659710b6518629cd8d6abd84c7633c3b29a9620802ea608c5cda99fd84d82863a4245fd8b97407d3ed6cbed
+EBUILD dovecot-2.2.12.ebuild 8841 SHA256 d5a634f4cfb0f76031297e50cc5e071a1fa430827ca64f58cbe51664806fc570 SHA512 7ae2d880867d6a0d950c61195233449ccabaa0b3da54650364e8995e6356b229956a237ea3511881a4bce23066252e3fbd7dbe1f4202e5ab1700fa36e9e7e0a8 WHIRLPOOL 202764d169d807e3d6d91ba1574d3ec4a52b6291f058abbad326602cfb3c499d438e369f2dc19ee7ea10806d775a7714ae73bdfa726c009983cbef0ebac9f4a7
+EBUILD dovecot-2.2.13-r1.ebuild 8921 SHA256 9f20a1395ebbf169f36831ab36936d95612dc3e71fd3717aa5f90615ce2d9cc6 SHA512 73b915b9499e52afcd520742d1e219d343be3be4be65526884503d0e48f0e3e1fcde4c9d1fe91bffdc3abb4e29a5bb2e2d974316d2b38e1764eaf387950ab9db WHIRLPOOL ccb22c9362429764fb70dcf69de7d5efb682a84888b7c1c0d8b4b03e93c39f0731f7ab85463db1b4509c2e3b9eac73571656dd2afc0a66815582aa33b6555443
+EBUILD dovecot-2.2.13.ebuild 8899 SHA256 0ca4d3d87d331bc464a7f44dba610de846750267d9883b994ff0da2e90575ae0 SHA512 af93b8b19dbef6a4bd27a6a9f61b954ae6516abf16050ed612f3618e2915d59cb84772b2bab449856efed8f323ab2099e3e951af62c0ac06b85ab530dc092808 WHIRLPOOL 180ed73a25a869587676862d47b7097337e6cb281fa55c21848802f7a45f0eb4be2dc6a96a596703f57c2c683eb87b182c718b6d908a9baa541503bee56e8de0
 EBUILD dovecot-2.2.9.ebuild 8622 SHA256 86f4fdac2ac4095840e57cd1188e00bd013d89face21e3fe7b5a6254af1e8efd SHA512 46e29a8b68aab961a5678fb0534490c7da2fa6284bf3b878313dfffeac0aeda429b09d093cc7eb93c0f61c54cfc259d7028dd594c16d97ff16e06f86de246025 WHIRLPOOL 82fd1003e529636ab214b8aabf7696d7a532b8e018176c1d85b259b80308b979097e5bc7ec9638780f0ed8351c25a50ebb432cc6a57dafab8152bcd40f4e669a
-MISC ChangeLog 71186 SHA256 fd897b079e7b9d13948c18468ab01915bf5d40466d4890b29e4610cc2c0eddce SHA512 8a892c14ccf1c027a7ad7f55c652276228d03fcec6b7cfcecd8fc9508c9fcbf0e2da6db51abbbf2f90c85201265b0db0ac56801cb60e6f61a9f7ad377cf27ed5 WHIRLPOOL d5b396eccac620112c762254d06f28165da2a90b94233cfc12cbe378232e9f7d223e47c144db015f53d407b5a4aa25cb96de69a3e83f365852be575439b06f96
+MISC ChangeLog 71357 SHA256 68bb94a4ad2f784809c9fea84fc4a530b30e34c20155ffd7cd7d135f598aa21e SHA512 7fa4096a02dc5ada116b2678b6a954e1b98dbbb693192d95617872aa976e150316143b0f0180271719f15e63a8ee56f435dbb417c98748d95dfd7b170d34d7b8 WHIRLPOOL 72319456dfa5e9b8de54d013b6c5294251870b63c6115c1b9f8c10e3708d937efb7434368b76aad1c73d9c87ec1787cf8029b91021ab108a8a2dd19730b9ed60
 MISC metadata.xml 1078 SHA256 cad311926efedde5a689ae18496389ca80a1e4c5b4b16f1bfb456e8e27ce118c SHA512 f208e189f4901e1385d4c237cb7c91f333021b7bc4656d8b8365d7f6d827dc3a3e7ef58963baec88f399ffea505577e94e7901c5e58119e5952736f1c129e4bb WHIRLPOOL d94e39a391cf3ce8c31647d55a387c6102e244fcc3ebdb34909024f8b2faecf7a225552c77dbc5d841ac45f2583ec38b7f8e18e9eee92fbc702210dbdb581740
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPefU0ACgkQkKaRLQcq0GLSAQCgmf1mhul0lxp4xzY13AyK6SvN
-G4sAnibf0B0DIsySMTW+SuNRXHy0K+H7
-=SC3a
+iQIcBAEBCAAGBQJT69m4AAoJEJOE+m71LUu60cIQAJ3gBIt/MYFUmwjbuMKi3WsX
+fM6R1mNtyDb22pSkxsD4QN2K5rD8dkomr7VLUd5augUxGoCnVbS0KJUP3FU9A8uV
+xYuXyTT2/dMD0yzf6QAp4rViKIEgSbWWf6jLLfAK2WXfq722Mhr2UqHtqFXzK6Mq
+dp0OpsaElZu/VxW8ozI/kLDaYMgzhWLDWOIusJZT2A8NQR9nmR4drWi9Fm6LNKKs
+XuIBwPFritta1jj/MHDJf7Hg9XNcqScATOQTzmTQFiPMW8B5YEZzuRVmhfIFSsve
+iX3cyXj+DnJ6LFmbvJbYhR60twN0e8QRQSCp44hyMGUyyAHH0MmSaHj9ivIKaDPq
+0dCrxe1iZSIbMN6LttGztTvrUQVy2bFbPqCAGGt0wVmD7EDUEAmcsRThdhFhABLA
+xldp1rMGf4tYnmtkkc2Bp6R06JQqV1lQrFaV3VTZRRC6eeDNVBK0S8KiK3J6XTmg
+HL1jpgi6H36XpSNNjupJTMpnBLtHvR8/kj0PJcttNhSUxk3XP1zFaURKszbKMpdu
+NRI/tJNP/eLx5QlWCuOUC2T3B5FJlaS6FXytj5RPFCnw3D0ykGZtc9lZ7bQvYKSQ
+I+3czbcu835R9KWdhGop727NnZQ9df8B5KEWp5cBqAPVg1yrKzC/5HAOtlYBrvLV
+3y/13VoQJfdkhTWu7H9q
+=xMNb
 -----END PGP SIGNATURE-----
