@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/dovecot/dovecot-2.2.13.ebuild,v 1.3 2014/06/08 10:41:12 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/dovecot/dovecot-2.2.13.ebuild,v 1.4 2014/08/13 21:31:19 blueness Exp $
 
 EAPI=5
 inherit eutils multilib ssl-cert systemd user versionator
@@ -25,7 +25,7 @@ HOMEPAGE="http://www.dovecot.org/"
 
 SLOT="0"
 LICENSE="LGPL-2.1 MIT"
-KEYWORDS="amd64 ~arm ~hppa ia64 ~x86"
+KEYWORDS="amd64 ~arm ~hppa ia64 ~ppc ~ppc64 ~x86"
 
 IUSE_DOVECOT_AUTH="kerberos ldap mysql pam postgres sqlite vpopmail"
 IUSE_DOVECOT_STORAGE="cydir imapc +maildir mbox mdbox pop3c sdbox"
